samples/_failures_safe/1761506215_1ffe8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3822f3e.c: In function ‘main’:
./samples/SAFE/__tmp_c3822f3e.c:137:5: error: expected declaration or statement at end of input
  137 |     }
      |     ^
